P4ADEV-476-add-api-get-service
