# openapi/p4pa-io-notification.openapi.yaml
@@ -118,8 +118,89 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/IoNotificationErrorDTO'
+
+  /service/{enteId}/{tipoDovutoId}:
+    get:
+      tags:
+        - ioNotification
+      operationId: getService
+      parameters:
+        - name: enteId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: tipoDovutoId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServiceDTO'
+        '401':
+          description: Authentication failed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IoNotificationErrorDTO'
+        '400':
+          description: Invalid Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IoNotificationErrorDTO'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IoNotificationErrorDTO'
+        '404':
+          description: Service not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IoNotificationErrorDTO'
+        '429':
+          description: Too many requests
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IoNotificationErrorDTO'
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IoNotificationErrorDTO'
 components:
   schemas:
+    ServiceDTO:
+      type: object
+      properties:
+        serviceId:
+          type: string
+        status:
+          type: string
+        serviceName:
+          type: string
+        serviceDescription:
+          type: string
+        organizationName:
+          type: string
+        organizationDepartmentName:
+          type: string
+        organizationFiscalCode:
+          type: string
+        creationRequestDate:
+          type: string
+        creationServiceDate:
+          type: string
     ServiceRequestDTO:
       type: object
       required:
