# src/main/java/it/gov/pagopa/payhub/ionotification/dto/mapper/IOServiceMapper.java
@@ -1,6 +1,7 @@
 package it.gov.pagopa.payhub.ionotification.dto.mapper;
 
 import it.gov.pagopa.payhub.ionotification.model.IOService;
+import it.gov.pagopa.payhub.model.generated.ServiceDTO;
 import it.gov.pagopa.payhub.model.generated.ServiceRequestDTO;
 import org.springframework.stereotype.Service;
 
@@ -21,5 +22,19 @@ public class IOServiceMapper {
                 .creationRequestDate(LocalDateTime.now())
                 .build();
 
+    }
+
+    public ServiceDTO mapService(IOService service){
+        return ServiceDTO.builder()
+                .serviceId(service.getServiceId())
+                .serviceName(service.getServiceName())
+                .status(service.getStatus())
+                .serviceDescription(service.getServiceDescription())
+                .organizationName(service.getOrganizationName())
+                .organizationDepartmentName(service.getOrganizationDepartmentName())
+                .organizationFiscalCode(service.getOrganizationFiscalCode())
+                .creationRequestDate(String.valueOf(service.getCreationRequestDate()))
+                .creationRequestDate(String.valueOf(service.getCreationRequestDate()))
+                .build();
     }
 }
